--- a/project3/app/build.gradle
+++ b/project3/app/build.gradle
@@ -10,7 +10,7 @@ android {
         minSdk 19
         targetSdk 31
         versionCode 1
-        versionName "1.0"
+        versionName "1.0"`
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -25,6 +25,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    compileSdkVersion 29
 }
 
 dependencies {
